--- a/docs/常用命令/常用镜像源.md
+++ b/docs/常用命令/常用镜像源.md
@@ -1,6 +1,8 @@
 # 镜像源
 
-## pip
+
+
+## pip源
 
 常用pip镜像源
 
@@ -21,4 +23,21 @@ https://mirrors.aliyun.com/pypi/simple/
 # 中国科技大学
 # 访问频次过多会被封禁ip导致pip下载失败
 https://pypi.mirrors.ustc.edu.cn/simple/
+```
+
+## yum源
+centos7 yum 使用阿里云镜像源
+```bash
+mv /etc/yum.repos.d/CentOS-Base.repo /etc/yum.repos.d/CentOS-Base.repo.backup
+
+wget -O /etc/yum.repos.d/CentOS-Base.repo https://mirrors.aliyun.com/repo/Centos-7.repo
+
+#或者
+#curl -o /etc/yum.repos.d/CentOS-Base.repo https://mirrors.aliyun.com/repo/Centos-7.repo
+
+#清除缓存
+yum clean all
+
+#生成缓存
+yum makecache
 ```
