--- a/docs/常用命令/常用镜像源.md
+++ b/docs/常用命令/常用镜像源.md
@@ -41,3 +41,29 @@ yum clean all
 #生成缓存
 yum makecache
 ```
+
+## conda源
+
+Linux 安装`miniconda`
+```bash
+mkdir -p ~/miniconda3
+wget https://repo.anaconda.com/miniconda/Miniconda3-latest-Linux-x86_64.sh -O ~/miniconda3/miniconda.sh
+bash ~/miniconda3/miniconda.sh -b -u -p ~/miniconda3
+rm -rf ~/miniconda3/miniconda.sh
+~/miniconda3/bin/conda init bash
+```
+
+
+conda设置成豆瓣源
+```bash
+conda config --add channels https://pypi.douban.com/anaconda/cloud/conda-forge/
+conda config --add channels https://pypi.douban.com/anaconda/cloud/msys2/
+conda config --add channels https://pypi.douban.com/anaconda/cloud/bioconda/
+conda config --add channels https://pypi.douban.com/anaconda/cloud/menpo/
+conda config --add channels https://pypi.douban.com/anaconda/cloud/pytorch/
+```
+
+显示配置文件的内容
+```bash
+conda config --show-sources
+```
