--- a/docs/运维/Linux/Bash基础/03_模式扩展.md
+++ b/docs/运维/Linux/Bash基础/03_模式扩展.md
@@ -1,5 +1,7 @@
 # Bash的模式扩展
 
+> 本文转载自 [Bash 的模式扩展](https://wangdoc.com/bash/expansion) by [网道](https://WangDoc.com)
+
 ## 简介
 
 Shell 接收到用户输入的命令以后，会根据空格将用户的输入，拆分成一个个词元（token）。然后，Shell 会扩展词元里面的特殊字符，扩展完成后才会调用相应的命令。
