--- a/docs/运维/Linux/Bash基础/04_引号和转义.md
+++ b/docs/运维/Linux/Bash基础/04_引号和转义.md
@@ -1,5 +1,8 @@
 # 引号和转义
 
+> 本文转载自 [引号和转义](https://wangdoc.com/bash/quotation) by [网道](https://WangDoc.com)
+
+
 Bash 只有一种数据类型，就是字符串。不管用户输入什么数据，Bash 都视为字符串。因此，字符串相关的引号和转义，对 Bash 来说就非常重要。
 
 ## 转义
