docs: update docs

--- a/docs/03_AI/大模型/度小满轩辕大模型训练记录.md
+++ b/docs/03_AI/大模型/度小满轩辕大模型训练记录.md
@@ -1,8 +1,20 @@
 # 度小满轩辕大模型训练记录
 
+**度小满金融大模型-轩辕6B复现**
+
+XuanYuan-6B采用类LLaMA的模型架构。
+
+GitHub项目地址： [GitHub - Duxiaoman-DI/XuanYuan: 轩辕：度小满中文金融对话大模型](https://github.com/Duxiaoman-DI/XuanYuan)
+
+数据集地址： https://huggingface.co/datasets/Duxiaoman-DI/FinCorpus
+
+XuanYuan-6B 技术报告： [XuanYuan/xuanyuan_6b_report.md at main · Duxiaoman-DI/XuanYuan · GitHub](https://github.com/Duxiaoman-DI/XuanYuan/blob/main/xuanyuan_6b_report.md)
+
+度小满轩辕大模型 PT 使用的是 DeepSpeed框架， A800 80G GPU 和 ZeRO-1级别进行训练。在我们的服务器上只能使用多机多卡（一台服务器A100 40G*2，*一台服务器 V100 * 2）ZeRO-3-Offload才能训练起来，但是执行时间非常久，训练完需要11年。ZeRO-3-offload 相关代码参考自Llama-Chinese项目，项目地址为：[GitHub - LlamaFamily/Llama-Chinese: Llama中文社区，最好的中文Llama大模型，完全开源可商用](https://github.com/LlamaFamily/Llama-Chinese)
+
 ## 环境搭建
 
-具体可查看：
+具体可查看：[分布式训练环境搭建](./分布式训练环境搭建.md)
 
 ### 运行环境
 
