docs: update 度小满轩辕大模型训练记录

--- a/docs/03_AI/大模型/度小满轩辕大模型训练记录.md
+++ b/docs/03_AI/大模型/度小满轩辕大模型训练记录.md
@@ -732,17 +732,27 @@ deepspeed \
 
 修改`pretrain_run.sh`，加上`--ds_offload_cpu`参数。
 
-
-
 #### 问题 7 Current loss scale already at minimum - cannot decrease scale anymore. Exiting run.
 
-再次运行就没有报错 OOM了, 但是执行过程中会日志显示 loss 会变成 nan ，再执行一会儿报错`Current loss scale already at minimum - cannot decrease scale anymore. Exiting run.`
+再次运行就没有报错 OOM了, 但是执行过程中会日志显示 loss 会变成 nan ，再执行一会儿报错`Current loss scale already at minimum - cannot decrease scale anymore. Exiting run.` 
 
 ![image-20240412110239071](https://danerlt-1258802437.cos.ap-chongqing.myqcloud.com/images/image-20240412110239071.png)
 
+错误原因是因为优化器学习率太高了，将优化器改成：
 
+```python
+ "optimizer": {
+            "type": "Adam",
+            "params": {
+                "lr": args.learning_rate,
+                "weight_decay": args.weight_decay
+            }
+        }
+```
 
+跑了一个晚上跑了700个step.
 
+![](https://danerlt-1258802437.cos.ap-chongqing.myqcloud.com/images/image-20240416013032268.png)
 
 
 
