docs: update docs

--- a/docs/03_AI/大模型/度小满轩辕大模型训练记录.md
+++ b/docs/03_AI/大模型/度小满轩辕大模型训练记录.md
@@ -684,7 +684,7 @@ t^H>>> torch.version.cuda
 >>> 
 ```
 
-可以看出我们pytorch对应的cuda版本是12.1，nccl的版本是2.18.1。重新安装nccl:
+可以看出我们pytorch对应的cuda版本是12.1，nccl的版本是2.18.1。重新安装nccl之后就没有训练卡死了。:
 
 ```bash
 # 卸载 nccl
