docs: update prompt docs

--- a/docs/03_AI/提示词工程/提示词工程.md
+++ b/docs/03_AI/提示词工程/提示词工程.md
@@ -1,4 +1,4 @@
-提示词工程（Prompt engineering)
+# 提示词工程（Prompt engineering)
 
 本文记录了大语言模型（有时称为 GPT 模型）中获得更好结果的策略。
 
@@ -443,17 +443,313 @@ USER: 我需要让我的互联网再次工作。
 
 
 
-## 四、给模型时间思考
+## 四、让模型思考
+
+如果要求将 17 乘以 28，您可能不会立即知道，但仍然可以随着时间的推移计算出来。同样，模型在试图立即回答时会犯更多的推理错误，而不是花时间找出答案。在回答之前要求一个“思维链”可以帮助模型更可靠地推理出正确的答案。
 
 ### 策略1：指示模型先制定解决方案再得出结果
 
+有时，当我们明确指示模型在得出结论之前从第一性原理进行推理时，我们会得到更好的结果。例如，假设我们想要一个模型来评估学生对数学问题的解决方案。解决这个问题的最明显方法是简单地询问模型学生的解决方案是否正确。
+
+示例1：
+
+```text
+SYSTEM: 确定学生的解决方案是否正确。
+USER: 问题陈述：我正在建造一个太阳能装置，我需要帮助解决财务问题。
+- 土地成本 100 元/平方米
+- 我可以以 250 元/平方米的价格购买太阳能电池板
+- 我协商了一份维护合同，每年将花费我 10 万元维护，以及额外的 10 元/平方米
+第一年运营的总成本与平方米数的函数是多少。
+
+学生的解决方案：设 x 为安装的大小（以平方米为单位）。
+1.土地成本：100x
+2.太阳能电池板成本：250x
+3.维护成本：100,000+100x
+总成本：100x + 250x + 100,000 + 100x = 450x + 100,000
+```
+
+![image-20240517093829864](https://danerlt-1258802437.cos.ap-chongqing.myqcloud.com/images/image-20240517093829864.png)
+
+改进版Prompt：
+
+```
+SYSTEM: 首先制定你的问题解决方案。然后将您的解决方案与学生的解决方案进行比较，并评估学生的解决方案是否正确。在你自己解决问题之前，不要决定学生的解决方案是否正确。
+USER: 问题陈述：我正在建造一个太阳能装置，我需要帮助解决财务问题。
+- 土地成本 100 元/平方米
+- 我可以以 250 元/平方米的价格购买太阳能电池板
+- 我协商了一份维护合同，每年将花费我 10 万元维护，以及额外的 10 元/平方米
+第一年运营的总成本与平方米数的函数是多少。
+
+学生的解决方案：设 x 为安装的大小（以平方米为单位）。
+1.土地成本：100x
+2.太阳能电池板成本：250x
+3.维护成本：100,000+100x
+总成本：100x + 250x + 100,000 + 100x = 450x + 100,000
+```
+
+![image-20240517094022800](https://danerlt-1258802437.cos.ap-chongqing.myqcloud.com/images/image-20240517094022800.png)
+
+
+
 ### 策略2：使用内心独白或一系列查询来隐藏模型的推理过程
+
+前面的策略表明，模型在回答特定问题之前详细推理问题有时很重要。
+
+对于某些应用程序，模型用于得出最终答案的推理过程不适合与用户共享。
+
+例如，在辅导应用程序中，我们可能鼓励学生找出自己的答案，但模型对学生解决方案的推理过程可能会向学生揭示答案。
+
+内心独白是一种可以用来缓解这种情况的策略。内心独白的思想是指示模型将输出中对用户隐藏的部分放入结构化格式中，以便于解析它们。然后，在向用户呈现输出之前，将解析输出，并且仅显示部分输出。
+
+示例1：
+
+```
+SYSTEM: 按照以下步骤回答用户查询。
+
+第 1 步 - 首先制定自己的问题解决方案。不要依赖学生的解决方案，因为它可能是不正确的。将此步骤的所有工作括在三引号 （"""） 中。
+
+第 2 步 - 将您的解决方案与学生的解决方案进行比较，并评估学生的解决方案是否正确。将此步骤的所有工作括在三引号 （"""） 中。
+
+第 3 步 - 如果学生犯了错误，请确定您可以在不泄露答案的情况下给学生什么提示。将此步骤的所有工作括在三引号 （"""） 中。
+
+第 4 步 - 如果学生犯了错误，请向学生提供上一步的提示（三引号之外）。而不是写“第 4 步 - ......”的提示。
+
+USER：问题陈述：一个盒子里有4个红球和6个蓝球。从盒子里不放回地抽取两个球。抽到的两个球中有一个是红球，另一个是蓝球的概率是多少？
+学生解答：(4/10)*(6/9) = 24/90 = 4/15
+```
+
+![image-20240517095040666](https://danerlt-1258802437.cos.ap-chongqing.myqcloud.com/images/image-20240517095040666.png)
+
+示例2：
+
+首先，我们可以要求模型自行解决问题。
+
+```
+问题陈述：一个盒子里有4个红球和6个蓝球。从盒子里不放回地抽取两个球。抽到的两个球中有一个是红球，另一个是蓝球的概率是多少？请逐步思考,制定问题的解决方案，然后根据解决方案计算得出最答案。最后将答案给出来。
+```
+
+大模型回答结果：
+
+```
+解决方案：
+
+首先，我们可以计算抽取两个球中至少有一个是红球、至少有一个是蓝球的情况。这可以通过计算以下两种情况的概率来实现：
+1. 第一个球是红球，第二个球是蓝球。
+2. 第一个球是蓝球，第二个球是红球。
+
+然后，我们将这两种情况的概率相加，即可得到抽取两个球中有一个是红球、另一个是蓝球的总概率。
+
+1. 第一个球是红球，第二个球是蓝球的情况：
+   - 第一个球是红球的概率为：4/10（因为盒子中有4个红球和总共10个球）。
+   - 在第一个球是红球的情况下，第二个球是蓝球的概率为：6/9（因为第一个球被抽取走后，剩下9个球中有6个蓝球）。
+   - 因此，这种情况的概率为：(4/10) × (6/9)。
+
+2. 第一个球是蓝球，第二个球是红球的情况：
+   - 第一个球是蓝球的概率为：6/10（因为盒子中有6个蓝球和总共10个球）。
+   - 在第一个球是蓝球的情况下，第二个球是红球的概率为：4/9（因为第一个球被抽取走后，剩下9个球中有4个红球）。
+   - 因此，这种情况的概率为：(6/10) × (4/9)。
+
+最后，将这两种情况的概率相加，得到抽取两个球中有一个是红球、另一个是蓝球的总概率。
+
+答案：
+
+\[ P(\text{一个红一个蓝}) = \left(\frac{4}{10} \times \frac{6}{9}\right) + \left(\frac{6}{10} \times \frac{4}{9}\right) \]
+
+\[ = \left(\frac{24}{90}\right) + \left(\frac{24}{90}\right) \]
+
+\[ = \frac{48}{90} \]
+
+\[ = \frac{8}{15} \]
+
+抽取两个球中有一个是红球、另一个是蓝球的概率为 \( \frac{8}{15} \)。
+```
+
+接下来，我们可以让模型使用所有可用信息来评估学生解决方案的正确性。
+
+```
+SYSTEM: 将您的解决方案与学生的解决方案进行比较，并评估学生的解决方案是否正确。
+USER:
+问题陈述：
+"""
+一个盒子里有4个红球和6个蓝球。从盒子里不放回地抽取两个球。抽到的两个球中有一个是红球，另一个是蓝球的概率是多少？请逐步思考,制定问题的解决方案，然后根据解决方案计算得出最答案。最后将答案给出来。
+"""
+
+您的解决方案：
+"""
+解决方案：
+
+首先，我们可以计算抽取两个球中至少有一个是红球、至少有一个是蓝球的情况。这可以通过计算以下两种情况的概率来实现：
+1. 第一个球是红球，第二个球是蓝球。
+2. 第一个球是蓝球，第二个球是红球。
+
+然后，我们将这两种情况的概率相加，即可得到抽取两个球中有一个是红球、另一个是蓝球的总概率。
+
+1. 第一个球是红球，第二个球是蓝球的情况：
+   - 第一个球是红球的概率为：4/10（因为盒子中有4个红球和总共10个球）。
+   - 在第一个球是红球的情况下，第二个球是蓝球的概率为：6/9（因为第一个球被抽取走后，剩下9个球中有6个蓝球）。
+   - 因此，这种情况的概率为：(4/10) × (6/9)。
+
+2. 第一个球是蓝球，第二个球是红球的情况：
+   - 第一个球是蓝球的概率为：6/10（因为盒子中有6个蓝球和总共10个球）。
+   - 在第一个球是蓝球的情况下，第二个球是红球的概率为：4/9（因为第一个球被抽取走后，剩下9个球中有4个红球）。
+   - 因此，这种情况的概率为：(6/10) × (4/9)。
+
+最后，将这两种情况的概率相加，得到抽取两个球中有一个是红球、另一个是蓝球的总概率。
+
+答案：
+
+\[ P(\text{一个红一个蓝}) = \left(\frac{4}{10} \times \frac{6}{9}\right) + \left(\frac{6}{10} \times \frac{4}{9}\right) \]
+
+\[ = \left(\frac{24}{90}\right) + \left(\frac{24}{90}\right) \]
+
+\[ = \frac{48}{90} \]
+
+\[ = \frac{8}{15} \]
+
+抽取两个球中有一个是红球、另一个是蓝球的概率为 \( \frac{8}{15} \)。
+"""
+
+学生的解决方案：
+"""
+(4/10)*(6/9) = 24/90 = 4/15
+"""
+```
+
+![image-20240517100046020](https://danerlt-1258802437.cos.ap-chongqing.myqcloud.com/images/image-20240517100046020.png)
+
+
+
+最后，我们可以让模型使用自己的分析来构建一个乐于助人的导师的角色的回复。
+
+```
+SYSTEM: 你是一名数学导师。如果学生犯了错误，请以不透露答案的方式向学生提供提示。如果学生没有犯错误，只需给他们一个鼓励性的评论。
+USER:
+问题陈述：
+"""
+一个盒子里有4个红球和6个蓝球。从盒子里不放回地抽取两个球。抽到的两个球中有一个是红球，另一个是蓝球的概率是多少？请逐步思考,制定问题的解决方案，然后根据解决方案计算得出最答案。最后将答案给出来。
+"""
+
+你的解决方案：
+"""
+解决方案：
+
+首先，我们可以计算抽取两个球中至少有一个是红球、至少有一个是蓝球的情况。这可以通过计算以下两种情况的概率来实现：
+1. 第一个球是红球，第二个球是蓝球。
+2. 第一个球是蓝球，第二个球是红球。
+
+然后，我们将这两种情况的概率相加，即可得到抽取两个球中有一个是红球、另一个是蓝球的总概率。
+
+1. 第一个球是红球，第二个球是蓝球的情况：
+   - 第一个球是红球的概率为：4/10（因为盒子中有4个红球和总共10个球）。
+   - 在第一个球是红球的情况下，第二个球是蓝球的概率为：6/9（因为第一个球被抽取走后，剩下9个球中有6个蓝球）。
+   - 因此，这种情况的概率为：(4/10) × (6/9)。
+
+2. 第一个球是蓝球，第二个球是红球的情况：
+   - 第一个球是蓝球的概率为：6/10（因为盒子中有6个蓝球和总共10个球）。
+   - 在第一个球是蓝球的情况下，第二个球是红球的概率为：4/9（因为第一个球被抽取走后，剩下9个球中有4个红球）。
+   - 因此，这种情况的概率为：(6/10) × (4/9)。
+
+最后，将这两种情况的概率相加，得到抽取两个球中有一个是红球、另一个是蓝球的总概率。
+
+答案：
+
+\[ P(\text{一个红一个蓝}) = \left(\frac{4}{10} \times \frac{6}{9}\right) + \left(\frac{6}{10} \times \frac{4}{9}\right) \]
+
+\[ = \left(\frac{24}{90}\right) + \left(\frac{24}{90}\right) \]
+
+\[ = \frac{48}{90} \]
+
+\[ = \frac{8}{15} \]
+
+抽取两个球中有一个是红球、另一个是蓝球的概率为 \( \frac{8}{15} \)。
+"""
+
+学生的解决方案：
+"""
+(4/10)*(6/9) = 24/90 = 4/15
+"""
+
+分析：
+"""
+您的解决方案是正确的，但是学生的解决方案有一个小错误。学生计算了一个红球一个蓝球的概率，但忽略了另一种情况：第一个球是蓝球，第二个球是红球。因此，学生的解决方案应该包括这两种情况的概率相加。正确的概率是 \( \frac{8}{15} \)。
+"""
+```
+
+![image-20240517100359050](https://danerlt-1258802437.cos.ap-chongqing.myqcloud.com/images/image-20240517100359050.png)
+
+GPT3.5 这种策略实测效果不好。
 
 ### 策略3：询问模型是否遗漏了内容
 
 ## 五、使用外部工具
 
 ### 策略1：使用基于Embedding搜索来实现高效的知识检索
+
+text embedding是一种向量，可以测量文本字符串之间的相关性。相似或相关的字符串将比不相关的字符串更接近。由于向量搜索算法的存在，embedding 可用于实现高效的知识检索。特别是，文本语料库可以拆分为块，并且每个块都可以embeding和存储。然后，可以对给定的查询做embedding，并执行向量搜索，以从语料库中找到与查询最相关的文本块。
+
+示例：
+
+其中的`context`是使用向量相似度算法从向量数据库中查询出来的。
+
+```
+你是一个乐于助人、尊重和诚实的AI 助手，名叫智能值班，你擅长从已知信息中检索答案给用户，你知识信息的搬运工而不是创造者。
+您正在与人类（用户）交谈。您由 xxxx 算法团队训练，与 GPT 或 OpenAI 无关。
+基于上下文信息的答案必须使用原始语言，并且禁止修改原始文本。
+如果无法从中得到答案，请说“根据已知信息无法回答该问题”，请使用中文作为答案。
+请按照 Markdown 格式解析已知信息。
+你有如下示例参考：
+<example>
+<context>
+### Wi-Fi连接正常，无法访问内外网
+可能原因及解决办法：
+
+可能原因：
+
+1.终端不符合公司信息安全要求，被网络准入系统拦截。
+
+2.终端网络设置错误，未设置为通过DHCP获取IP地址，子网掩码，网关和DNS等必要信息
+
+3.域账号密码错误
+
+解决办法：
+
+1.接入公司内网终端需安装McAfee杀毒软件，ForeScout网络准入等软件，Windows终端需加入公司域。
+
+2.需将终端设置为 DHCP（自动获取IP地址和DNS服务器）
+
+3.域账号密码过期，或已更改密码但未手动重新输入Wi-Fi密码。
+</context>
+<question>Wi-Fi连接正常，无法访问内外网</question>
+<answer>
+可能原因及解决办法：
+
+可能原因：
+
+1.终端不符合公司信息安全要求，被网络准入系统拦截。
+
+2.终端网络设置错误，未设置为通过DHCP获取IP地址，子网掩码，网关和DNS等必要信息
+
+3.域账号密码错误
+
+解决办法：
+
+1.接入公司内网终端需安装McAfee杀毒软件，ForeScout网络准入等软件，Windows终端需加入公司域。
+
+2.需将终端设置为 DHCP（自动获取IP地址和DNS服务器）
+
+3.域账号密码过期，或已更改密码但未手动重新输入Wi-Fi密码。
+</answer>
+</example>
+
+<context>
+{context}
+</context>
+<question>{question}</question>
+<answer>:
+
+```
+
+
 
 ### 策略2：使用代码执行来执行更准确的计算或调用外部API
 
@@ -464,3 +760,11 @@ USER: 我需要让我的互联网再次工作。
 ### 策略1：参考标准答案评估模型输出
 
 
+
+
+
+##  参考链接
+
+-   [OpenAI prompt engineering guides](https://platform.openai.com/docs/guides/prompt-engineering)
+
+-   [提示词工程指南中文版](https://www.promptingguide.ai/zh)
