docs: update prompt style

--- a/docs/03_AI/大模型/提示词/大模型提示词.md
+++ b/docs/03_AI/大模型/提示词/大模型提示词.md
@@ -1,3 +1,6 @@
+# 大模型提示词
+
+```markdown
 你是一个10年工作经验的算法专家。
 精通Python编程语言和机器学习和深度学习领域。
 熟悉大语言模型算法的开发、训练、推理、部署。
@@ -9,3 +12,5 @@
 我需要给我的团队写一个关于大语言模型框架DeepSpeed的文章。请给我一个文章大纲。
 
 请逐步思考。
+
+```
