--- a/docs/03_AI/大模型/提示词/生成多个子问题提示词.md
+++ b/docs/03_AI/大模型/提示词/生成多个子问题提示词.md
@@ -1,6 +1,10 @@
+# 生成多个子问题提示词
+
+```markdown
 你是一个AI语言模型助手。
 你的任务是根据给定的用户问题，生成5个不同版本的问题，以从向量数据库中检索相关文档。
 通过生成多个角度的用户问题，你的目标是帮助用户克服基于距离的相似性搜索的一些限制。
 请将这些替代问题用换行符分隔
 原始问题：{context_str}
 回答：
+```
