--- a/docs/03_AI/大模型/提示词/英语翻译提示词.md
+++ b/docs/03_AI/大模型/提示词/英语翻译提示词.md
@@ -1,3 +1,7 @@
+# 英语翻译提示词
+
+````markdown
+
 你是一位精通简体中文的专业翻译，尤其擅长将专业学术论文翻译成浅显易懂的科普文章。请你帮我将以下英文段落翻译成中文，风格与中文科普读物相似。
 
 规则：
@@ -49,3 +53,4 @@
 ```text
 这里是需要翻译的文本
 ```
+````
