docs: updata docs

--- a/docs/03_AI/大模型/提示词/求职提示词.md
+++ b/docs/03_AI/大模型/提示词/求职提示词.md
@@ -26,26 +26,51 @@
 我会给你一些我的工作内容，你需要按照招聘JD帮我优化： 
 
 工作内容如下：
-```
-# 个人优势
-熟悉使用常用前端技术HTML、CSS、JavaScript
-熟悉Python开发, 熟悉Django框架,熟悉REST ful
-熟悉常用的算法和数据结构
-熟悉多进程多线程
-熟悉Linux，Bash
-掌握微服务架构，了解thrift框架
-掌握 Scrapy，Selenium等爬虫框架
-熟悉Git工作流程
-熟练使用MySQL
-了解Redis，MongoDB，Docker
+````markdown
+一个基于检索增强生成（RAG）技术和大语言模型的垂直领域知识库问答系统。现在系统已经上线使用，根据用户反馈，能解决用户80%左右的问题。
 
-# 工作经验
-广域铭岛数字科技有限公司
-2021年12月-至今
-工作内容：
-1.负责 AI 平台 Python 服务开发
-2.负责 AI 应用开发
-3.负责知识助手项目后端开发。
+- **技术选型和架构设计**：
+
+  - 设计RAG系统架构，主要分为数据加载、分片、构建索引、检索、提示词模板、大模型对话、RAG评估等核心模块。
+  - 对比Langchain框架和LlamaIndex框架的功能和适用场景，最终选择基于Langchain框架实现RAG中数据加载和分片模块，基于LlamaIndex实现构建索引、检索、提示词、大模型对话、RAG评估模块。
+  - 对比传统数据库和向量数据库特性，最终选择Qdrant存储向量数据，使用MongoDB存储分片后的文档，使用PostgreSQL存储服务相关的数据库表。
+
+  **RAG技术全流程的开发**：
+
+  - 加载模块：基于Langchain框架实现文档加载模块。
+
+  - 分片模块：对比LangChain框架和LlamaIndex框架的多种分片策略，选择合适的分片策略。并对markdown、csv、excel格式的文件进行了优化。
+  - 构建索引：
+    - 基于LlamaIndex框架构建索引，并对其索引结构进行优化，只需要使用MongoDB存储文档，使用Qdrant存储向量数据。去掉了index_store，减少了检索链路，提高了检索效率。
+    - embeding模型优化：从beg-base切换到m3e-bse再到微调bge-base。
+  - 检索：
+    - 检索主要分为组合检索和单一检索两大类，组合检索可以将多个检索器的结果根据合并策略合并起来，再进行检索后处理。单一检索器有分为检索前、检索中、检索后3个步骤。
+    - 检索前主要实现了HyDE,MultiQuestion等查询转换。
+    - 检索中实现了向量数据库相似度检索和BM25算法检索。
+    - 检索后实现了去重、使用rerank model重排、根据平均值过滤、使用Kmeans算法过滤等方法。
+    - 组合检索实现了Extend合并、求交集、Fusion算法合并等方法。
+    - 将检索模块各种方法排列组合成25+种检索策略，并通过RAG评估找的检索效果最好的策略。
+  - 提示词模板：
+    - 运用角色扮演、COT、few-show等提示词工程技术对提示词进行优化。
+  - 大模型对话：
+    - 对比chatglm3-6b、qwen1.5-7b、qwen1.5-14B等模型推理效果，结合显存资源使用qwen1.5-14B作为基座大模型。
+    - 使用FastChat和vllm模块部署大语言模型到生成环境
+  - RAG评估：
+    - LlamaIndex框架只支持对一种策略进行评估，使用进程池和队列对多种策略进行评估。最终测试下来使用组合检索（BM25和向量数据库）加上重排和平均值过滤的策略可以使检索效果最好。
+  - 多轮对话优化：
+    - 使用意图识别提升用户输入不明确的场景的回答效果。
+    - 使用根据历史信息重写问题提升多轮对话的回答效果。
+
+- **Web服务**：
+
+  - 使用Flask技术栈和Gunicorn、Docker、Docker Compose等工具搭建知识库PythonWeb服务。开发数据集管理、文件管理，对话管理的RESTful API。
+  - 使用Docker-compose管理PostgreSQL、Redis、Qrant、MinIO、MongoDB等中间件。
+
+- **模型训练、部署**：
+
+  - 利用FastChat、vllm、Docker-compose等工具将LLM、embedding、rerank模型部署到生产环境。
+  - 使用Deepspeed、LlamaFactory和Docker，搭建大语言模型分布式训练和微调的环境。
+  - 验证了Atom-7B、XuanYuan-7B、Llama2-7B的二次预训练和微调过程。
 
 
-```
+````
